src/patternfly/components/DataList/data-list.scss
/* ... */
.pf-c-data-list__item-control {
  display: flex;
  flex-wrap: nowrap;
  padding-top: var(--pf-c-data-list__item-control--PaddingTop);
  padding-bottom: var(--pf-c-data-list__item-control--PaddingBottom);
  margin-right: var(--pf-c-data-list__item-control--MarginRight);

  > *:not(:last-child) {
    margin-right: var(--pf-c-data-list__item-control--not-last-child--MarginRight);
  }
}

.pf-c-data-list__item-action {
  @include pf-hidden-visible(var(--pf-c-data-list__item-action--Display));

  display: var(--pf-c-data-list__item-action--Display);
  flex-wrap: nowrap;
  align-items: flex-start;
  align-content: flex-start;
  padding-top: var(--pf-c-data-list__item-action--PaddingTop);
  padding-bottom: var(--pf-c-data-list__item-action--PaddingBottom);
  margin-left: var(--pf-c-data-list__item-action--MarginLeft);

  > *:not(:last-child) {
    margin-right: var(--pf-c-data-list__item-action--not-last-child--MarginRight);

    @media screen and (max-width: $pf-global--breakpoint--lg) {
      margin-bottom: var(--pf-c-data-list__item-action--not-last-child--lg--MarginBottom);
    }
  }

  @media screen and (max-width: $pf-global--breakpoint--lg) {
    flex-wrap: wrap;
  }

  // Offset action button
  .pf-c-data-list__action {
    margin-top: var(--pf-c-data-list__action--MarginTop);
  }
}

// Toggle
.pf-c-data-list__toggle {
  margin-top: var(--pf-c-data-list__toggle--MarginTop);
  margin-left: var(--pf-c-data-list__toggle--MarginLeft);

  // rotate icon
  .pf-c-button > * {
    pointer-events: none;
    transition: var(--pf-c-data-list__toggle-icon--Transition);

    .pf-c-data-list__item.pf-m-expanded & {
      transform: var(--pf-c-data-list__item--m-expanded__toggle--c-button-icon--Transform);
    }
  }
}

.pf-c-data-list__item-row,
.pf-c-data-list__expandable-content {
  position: relative;

  // left border treatment base
  &::before {
    --pf-c-data-list__item--before--Height: var(--pf-c-data-list__item-item--before--Height); // remove after breaking change

    position: absolute;
    top: var(--pf-c-data-list__item--before--Top);
    bottom: var(--pf-c-data-list__item--before--Bottom);
    left: 0;
    width: var(--pf-c-data-list__item--before--Width);
    height: var(--pf-c-data-list__item--before--Height); // remove after breaking change period
    content: "";
    background-color: var(--pf-c-data-list__item--before--BackgroundColor); // color is transparent by default
    transition: var(--pf-c-data-list__item--before--Transition);
  }
}

.pf-c-data-list__item-content {
  display: flex;
  flex-wrap: wrap;
  flex-grow: 1;
  padding-bottom: var(--pf-c-data-list__item-content--PaddingBottom);

  @media screen and (max-width: $pf-global--breakpoint--md) {
    display: grid;
    width: 100%;
    grid-template-columns: auto 1fr;
    padding-bottom: 0;
  }
}

// Content cells
.pf-c-data-list__cell {
  flex: 1;
  padding-top: var(--pf-c-data-list__cell--PaddingTop);
  grid-column: 1 / -1;
  padding-bottom: var(--pf-c-data-list__cell--PaddingBottom);

  @media screen and (min-width: $pf-global--breakpoint--md) {
    &:not(:last-child) {
      margin-right: var(--pf-c-data-list__cell-cell--MarginRight);
    }
  }

  // for all subsequent .pf-c-data-list__cell's, set to full width
  & + & {
    flex: 1 0 100%;
    order: 1;
    padding-top: var(--pf-c-data-list__cell-cell--PaddingTop);

    @media screen and (min-width: $pf-global--breakpoint--md) {
      flex: 1;
      order: initial;
    }
  }

  &.pf-m-icon {
    flex-grow: 0;
    margin-right: var(--pf-c-data-list__cell--m-icon--MarginRight);
    grid-column: 1 / 2;
  }

  &.pf-m-no-fill {
    flex-grow: 0;
  }

  &.pf-m-align-right {
    margin-left: auto;

    @media screen and (max-width: $pf-global--breakpoint--md) {
      margin-left: 0;
    }
  }

  &.pf-m-icon + & {
    grid-column: 2 / 3;
    padding-top: var(--pf-c-data-list__cell--PaddingTop);
  }

  &.pf-m-flex-2 { flex-grow: 2; }
  &.pf-m-flex-3 { flex-grow: 3; }
  &.pf-m-flex-4 { flex-grow: 4; }
  &.pf-m-flex-5 { flex-grow: 5; }
}

// Expandable content
.pf-c-data-list__expandable-content {
  box-shadow: var(--pf-c-data-list__expandable-content--BoxShadow);

  .pf-c-data-list__expandable-content-body {
    padding: var(--pf-c-data-list__expandable-content-body--PaddingTop) var(--pf-c-data-list__expandable-content-body--PaddingRight) var(--pf-c-data-list__expandable-content-body--PaddingBottom) var(--pf-c-data-list__expandable-content-body--PaddingLeft);
    border-top: var(--pf-c-data-list__item--m-expanded__expandable-content--BorderTopWidth) solid var(--pf-c-data-list__expandable-content--BorderTopColor);

    &.pf-m-no-padding {
      padding: 0;
    }
  }

  @media screen and (max-width: $pf-global--breakpoint--md) {
    max-height: var(--pf-c-data-list__expandable-content--md--MaxHeight);
    overflow-y: auto;
  }
}

