fix(data-list): enabled hidden/visible feature to update display

--- a/src/patternfly/components/DataList/data-list.scss
+++ b/src/patternfly/components/DataList/data-list.scss
@@ -219,7 +219,6 @@
 .pf-c-data-list__item-action {
   @include pf-hidden-visible(var(--pf-c-data-list__item-action--Display));
 
-  display: var(--pf-c-data-list__item-action--Display);
   flex-wrap: nowrap;
   align-items: flex-start;
   align-content: flex-start;
